<resources>
    <string name="app_name">NASA Rover Vehicle</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="filter_title">Select Camera Filter</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="no_record">No Record</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <string name="take_photo_date">Take Photo Date</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="camera_name">Camera Name</string>
    <string name="vehicle_status">Vehicle Status</string>
    <string name="launch_date">Launch Date</string>
    <string name="landing_date">Landing Date</string>


    <!--Camera Type-->
    <string name="FHAZ">FHAZ</string>
    <string name="RHAZ">RHAZ</string>
    <string name="MAST">MAST</string>
    <string name="CHEMCAM">CHEMCAM</string>
    <string name="MAHLI">MAHLI</string>
    <string name="MARDI">MARDI</string>
    <string name="NAVCAM">NAVCAM</string>
    <string name="PANCAM">PANCAM</string>
    <string name="MINITES">MINITES</string>
</resources>